# fault_management_uds

./: .gitignore  Makefile  README.md  ___considerations___.md  environment.yml  pyproject.toml  requirements.txt  submit_cpu.sh  submit_gpu.sh  temp.sh
docs/: mkdocs.yml
docs/docs/: index.md
experiments/: default.yaml  testing.yaml
experiments/0_benchmarks/: lin_reg.yaml  lstm.yaml
experiments/0_lstm/: 128_1.yaml  32_1.yaml  base.yaml
experiments/1_model_complexity/: 128_1_1.yaml  128_1_2.yaml  128_2_2.yaml  128_2_4.yaml  128_4_2.yaml  (+10 more)
fault_management_uds/: __init__.py  anomaly_evaluation.py  config.py  dataset.py  detection_results.py  evaluate.py  evaluate_detection.py  evaluate_model.py  features.py  get_detection.py  get_features.py  get_integrated_gradients.py  get_outputs.py  iterative.py  iterative_results.py  main.py  plots.py  train.py  train_model.py  utilities.py
hpc_logs/: 23452677_transf_complex.err  23452677_transf_complex_.out  23457915-_transf_test.err  23457915-_transf_test.out  23462837-_transf_test.err  23462837-_transf_test.out  23464637-_transf_test.err  23464637-_transf_test.out  23467228-_transf_test.err  23467228-_transf_test.out  23475916-_transf_test.err  23475916-_transf_test.out  23475918-_transf_test.err  23475918-_transf_test.out  23475919-lstm.err  23475919-lstm.out  23475920-lstm.err  23475920-lstm.out
notebooks/: _plan.md  vanilla_modelling.ipynb
references/: clf_rain_events.csv  external_metadata.csv  indicator_2_data_label.json  sensor_metadata.csv  sensor_ranges.json  synthetic_config.yaml
reports/: qgis.qgz
(+185 files in other folders)
